--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,4 +14,28 @@
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
+
+    <style name="Style.Text.Primary.Normal" parent="android:Widget">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/font_size_normal</item>
+        <item name="android:textColor">#000</item>
+        <item name="android:includeFontPadding">false</item>
+    </style>
+
+    <style name="Style.Text.Primary.Normal.Wrap">
+        <item name="android:layout_width">wrap_content</item>
+    </style>
+
+    <style name="Style.Text.Second.Normal" parent="android:Widget">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textSize">@dimen/font_size_normal</item>
+        <item name="android:textColor">#676767</item>
+        <item name="android:includeFontPadding">false</item>
+    </style>
+
+    <style name="Style.Text.Second.Normal.Wrap">
+        <item name="android:layout_width">wrap_content</item>
+    </style>
 </resources>
