--- a/app/src/main/res/layout/view_titlebar.xml
+++ b/app/src/main/res/layout/view_titlebar.xml
@@ -5,4 +5,5 @@
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay"
         app:popupTheme="@style/AppTheme.PopupOverlay"/>
