Added replace rule

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,29 +5,29 @@
 
     <group android:checkableBehavior="single">
         <item
-                android:id="@+id/nav_home"
+                android:id="@+id/nav_backup"
                 android:icon="@drawable/ic_menu_camera"
-                android:title="@string/menu_home"/>
+                android:title="@string/menu_backup"/>
         <item
-                android:id="@+id/nav_gallery"
+                android:id="@+id/nav_import"
                 android:icon="@drawable/ic_menu_gallery"
-                android:title="@string/menu_gallery"/>
+                android:title="@string/menu_import"/>
         <item
-                android:id="@+id/nav_slideshow"
+                android:id="@+id/nav_import_old"
                 android:icon="@drawable/ic_menu_slideshow"
-                android:title="@string/menu_slideshow"/>
+                android:title="@string/menu_import_old"/>
         <item
-                android:id="@+id/nav_tools"
+                android:id="@+id/nav_import_github"
                 android:icon="@drawable/ic_menu_manage"
-                android:title="@string/menu_tools"/>
+                android:title="@string/menu_import_github"/>
     </group>
 
     <item android:title="Communicate">
         <menu>
             <item
-                    android:id="@+id/nav_share"
+                    android:id="@+id/nav_replace_rule"
                     android:icon="@drawable/ic_menu_share"
-                    android:title="@string/menu_share"/>
+                    android:title="@string/menu_replace_rule"/>
             <item
                     android:id="@+id/nav_send"
                     android:icon="@drawable/ic_menu_send"
