Added replace rule

--- a/app/src/main/res/layout/activity_replace_rule.xml
+++ b/app/src/main/res/layout/activity_replace_rule.xml
@@ -5,14 +5,14 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="io.legado.app.ui.search.SearchActivity">
+        tools:context=".ui.replacerule.ReplaceRuleActivity">
 
     <io.legado.app.ui.widget.TitleBar
-            android:id="@+id/titleBar"
+            android:id="@+id/title_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
-            app:title="净化替换"/>
+            app:title="@string/replace"/>
 
     <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/rv_replace_rule"
