Remove slf4j from jsonpath

--- a/app/src/main/res/layout/activity_replace_rule.xml
+++ b/app/src/main/res/layout/activity_replace_rule.xml
@@ -23,7 +23,7 @@
             android:layout_marginBottom="8dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/titleBar"
+            app:layout_constraintTop_toBottomOf="@+id/title_bar"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintVertical_bias="0.0"/>
 
