Created backup and restore objects

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,7 +9,7 @@
                 android:icon="@drawable/ic_menu_camera"
                 android:title="@string/menu_backup"/>
         <item
-                android:id="@+id/nav_import"
+                android:id="@+id/nav_restore"
                 android:icon="@drawable/ic_menu_gallery"
                 android:title="@string/menu_restore"/>
         <item
