--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/drawer_layout"
         android:layout_width="match_parent" android:layout_height="match_parent"
-        android:fitsSystemWindows="true" tools:openDrawer="start">
+        tools:openDrawer="start">
 
     <include
             layout="@layout/app_bar_main"
@@ -18,6 +18,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="start"
             android:fitsSystemWindows="true"
+            app:insetForeground="@color/transparent"
             app:headerLayout="@layout/nav_header_main"
             app:menu="@menu/activity_main_drawer"/>
 
