--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -5,4 +5,11 @@
           android:title="@string/action_settings"
           android:orderInCategory="100"
           app:showAsAction="never"/>
+
+
+    <item android:id="@+id/action_test"
+          android:title="测试"
+          android:icon="@drawable/ic_search"
+          android:orderInCategory="100"
+          app:showAsAction="never"/>
 </menu>
