--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
                 android:id="@+id/bottom_navigation_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                app:labelVisibilityMode="labeled"
                 app:menu="@menu/activity_main_bnv"
                 app:layout_constraintBottom_toBottomOf="parent"/>
 
