--- a/app/src/main/res/menu/activity_main_bnv.xml
+++ b/app/src/main/res/menu/activity_main_bnv.xml
@@ -4,19 +4,19 @@
       tools:showIn="bottom_navigation_view">
 
     <item
-            android:id="@+id/nav_backup"
+            android:id="@+id/menu_bookshelf"
             android:icon="@drawable/ic_menu_camera"
             android:title="书架"/>
     <item
-            android:id="@+id/nav_restore"
+            android:id="@+id/menu_find_book"
             android:icon="@drawable/ic_menu_gallery"
             android:title="发现"/>
     <item
-            android:id="@+id/nav_import_old"
+            android:id="@+id/menu_book_source"
             android:icon="@drawable/ic_menu_slideshow"
             android:title="书源"/>
     <item
-            android:id="@+id/nav_import_github"
+            android:id="@+id/menu_my_config"
             android:icon="@drawable/ic_menu_manage"
             android:title="我的"/>
 
