--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -11,6 +11,8 @@
         <attr name="attachToActivity" format="boolean"/>
         <attr name="displayHomeAsUp" format="boolean"/>
         <attr name="navigationIcon" format="reference"/>
+        <attr name="fitStatusBar" format="boolean"/>
+        <attr name="fitNavigationBar" format="boolean"/>
         <attr name="navigationContentDescription" format="reference|string"/>
         <attr name="navigationIconTint" format="color|reference"/>
         <attr name="navigationIconTintMode" format="enum">
