--- a/app/src/main/res/layout/fragment_find_book.xml
+++ b/app/src/main/res/layout/fragment_find_book.xml
@@ -9,6 +9,7 @@
             android:id="@+id/title_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:attachToActivity="false"
             app:layout_constraintTop_toTopOf="parent"
             app:title="@string/find"/>
 
