--- a/app/src/main/res/menu/bookshelf.xml
+++ b/app/src/main/res/menu/bookshelf.xml
@@ -3,9 +3,9 @@
       xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/action_settings"
-          android:title="@string/action_settings"
+          android:title="筛选"
           android:orderInCategory="100"
-          app:showAsAction="never"/>
+          app:showAsAction="always"/>
 
     <item android:id="@+id/action_test"
           android:title="测试"
